2011-08-16  Andreas Schwab  <schwab@redhat.com>

	[BZ #11724]
	* elf/dl-deps.c (_dl_map_object_deps): Only assume cycle when
	object is seen twice.
	* elf/dl-fini.c (_dl_sort_fini): Likewise.

	* elf/Makefile (distribute): Add tst-initorder2.c.
	(tests): Add tst-initorder2.
	(modules-names): Add tst-initorder2a tst-initorder2b
	tst-initorder2c tst-initorder2d.  Add rules to build them.
	($(objpfx)tst-initorder2.out): New rule.
	* elf/tst-initorder2.c: New file.
	* elf/tst-initorder2.exp: New file.

2011-08-22  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/i386/scandir64.c: Include <string.h>.

	* elf/dl-deps.c (_dl_map_object_deps): Move check for missing
	dependencies back to end of function.

	* dlfcn/Makefile (LDLIBS-bug-atexit3-lib.so): Readd
	$(elfobjdir)/ld.so.

2011-08-21  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/sysv/linux/x86_64/gettimeofday.S: Removed.
	* sysdeps/unix/sysv/linux/x86_64/time.S: Removed.
	* sysdeps/unix/sysv/linux/x86_64/gettimeofday.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/time.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/bits/libc-vdso.h: Remove declaration
	of __vdso_gettimeofday.
	* sysdeps/unix/sysv/linux/x86_64/init-first.c: Remove definition of
	__vdso_gettimeofday and __vdso_time.  Define __vdso_getcpu with
	attribute_hidden.
	(_libc_vdso_platform_setup): Remove initialization of
	__vdso_gettimeofday and __vdso_time.

2011-08-20  Ulrich Drepper  <drepper@gmail.com>

	* nss/nss_files/files-alias.c (get_next_alias): Use feof_unlocked
	and fgetc_unlocked.
	* nss/nss_files/files-key.c (search): Use fgets_unlocked and
	getc_unlocked.

	* elf/dl-open.c (add_to_global): Report additions to the global scope
	for LD_DEBUG=scopes.
	(dl_open_worker): Also print scope of newly loaded dependencies.
	(_dl_show_scope): Indicate if there is no scope.

	[BZ #13114]
	* stdio-common/Makefile (tests): Add bug24.
	* stdio-common/bug24.c: New file.

2011-08-19  Andreas Jaeger  <aj@suse.de>

	[BZ #13114]